--- a/Water/Source/imgui.ini
+++ b/Water/Source/imgui.ini
@@ -14,7 +14,7 @@ Size=354,162
 Collapsed=0
 
 [Window][Function Performance (ms)]
-Pos=1719,194
+Pos=1721,293
 Size=192,65
 Collapsed=0
 
@@ -54,9 +54,9 @@ Size=214,312
 Collapsed=0
 
 [Window][Shaders]
-Pos=1333,20
+Pos=1694,186
 Size=220,100
-Collapsed=1
+Collapsed=0
 
 [Window][Cave Generator]
 Pos=37,360
@@ -69,12 +69,17 @@ Size=233,282
 Collapsed=0
 
 [Window][Piped Water Simulation]
-Pos=12,340
+Pos=10,335
 Size=237,287
 Collapsed=0
 
 [Window][Simulation]
-Pos=11,15
+Pos=9,8
 Size=357,318
+Collapsed=0
+
+[Window][Rendering]
+Pos=11,627
+Size=182,78
 Collapsed=0
 
